# Semi-analytic-Error-Budget

./: .gitignore  README.md  Total_Variance copia.py  Total_Variance.py  params_mod4 copia.yaml  params_mod4.yaml  pyproject.toml  requirements.txt
src/: Functions.py  plots copia.py  plots.py  test_plot.py
src/file_fits/: slopes_rms_time_avg_all.fits
src/file_fits/ANDES/: ANDES_og_mod0.fits  ANDES_og_mod4.fits  ANDES_pyr100x100_wl850_fv2.1_slInten_ma3_bn1_mn4000_noise_prop_coeff.fits
src/file_fits/LBT/: FLAO_pyr30x30_wl750_fv2.1_ma3_bn1_mn400_noise_prop_coeff.fits  SOUL_ALIAS.fits  SOUL_OPTG.fits  SOUL_pyr40x40_wl750_fv2.1_ma3_bn1_mn500_noise_prop_coeff.fits
tests/: test_functions.py  test_noise_error_term.py
